--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -1065,9 +1065,9 @@
       "question": "What concern does the passage raise about the development of AI capabilities?",
       "options": {
         "A": "They are concentrated among a few technology companies",	      
-        "B": "They are developing too slowly to be useful",
-        "C": "They are primarily focused on artistic applications",
-        "D": "They are becoming less sophisticated over time"
+        "B": "They are primarily focused on artistic applications",
+        "C": "They are becoming less sophisticated over time",
+        "D": "They are developing too slowly to be useful"
       },
       "correct_answer": "A",
       "category": "Reading Comprehension",
@@ -1078,8 +1078,8 @@
       "question": "The author's tone in discussing future AI trajectories can best be described as:",
       "options": {
         "A": "Alarmist and fearful",
-        "B": "Dismissive of potential risks",
-        "C": "Enthusiastically supportive",
+        "B": "Enthusiastically supportive",
+        "C": "Dismissive of potential risks",
         "D": "Balanced and cautiously optimistic"	      
       },
       "correct_answer": "D",
