--- a/A1/test1.html
+++ b/A1/test1.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
-	  <title>English Test 1 Level A1 | englishtests.online</title>
+	  <title>English Level A1 Test 1 | englishtests.online</title>
 	  <meta name="description" content="Free A1 English test with grammar, vocabulary, use of English, and a reading comprehension text. Practice for TOEFL or IELTS.">
 	  <meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, A1 Free English test, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
     <meta name="author" content="englishtests.online">
