--- a/de/englisch-effektiv-lernen.html
+++ b/de/englisch-effektiv-lernen.html
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://englishtests.online/de/englisch-effektiv-lernen">
 
     <link rel="alternate" hreflang="en" href="https://englishtests.online/learn-english-effectively" />
-    <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv" />
+    <link rel="alternate" hreflang="zh-CN" href="https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv" />
     <link rel="alternate" hreflang="hi" href="https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike" />
     <link rel="alternate" hreflang="es" href="https://englishtests.online/es/aprender-ingles-eficientemente" />
     <link rel="alternate" hreflang="fr" href="https://englishtests.online/fr/apprendre-anglais-efficacement" />
