--- a/ja/findword.html
+++ b/ja/findword.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://englishtests.online/ja/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
-    <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
+    <link rel="alternate" hreflang="zh-CN" href="https://englishtests.online/zh-CN/findword" />
     <link rel="alternate" hreflang="hi" href="https://englishtests.online/hi/findword" />
     <link rel="alternate" hreflang="es" href="https://englishtests.online/es/findword" />
     <link rel="alternate" hreflang="fr" href="https://englishtests.online/fr/findword" />
