--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
 
         .quiz-button:hover {
             background-color: var(--primary-color-darker);
+            color: white;
             transform: translateY(-2px);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
         }
