--- a/index.html
+++ b/index.html
@@ -513,6 +513,11 @@
                 font-size: 1.3em;
                 padding: 15px;
             }
+
+            .quiz-button {
+                font-size: 1.3em;
+                padding: 15px;
+            }
             
             .button-grid {
                 gap: 12px;
